erDiagram

    company_info {
        int company_info_id PK
        nvarchar company_name
        nvarchar address
        nvarchar tel
        nvarchar fax
        nvarchar invoice_no "適格請求書発行事業者番号"
    }

    payment_method_classifications {
        int payment_method_id PK
        nvarchar payment_method_code
        nvarchar payment_method_name
        bit is_deleted
        rowversion row_version
    }

    tax_type_classifications {
        int tax_type_id PK
        nvarchar tax_type_code
        nvarchar tax_type_name
        bit is_deleted
        rowversion row_version
    }

    tax_category_classifications {
        int tax_category_id PK
        nvarchar tax_category_code
        nvarchar tax_category_name
        bit is_deleted
        rowversion row_version
    }

    tax_fraction_classifications {
        int tax_fraction_id PK
        nvarchar tax_fraction_code
        nvarchar tax_fraction_name
        bit is_deleted
        rowversion row_version
    }

    tax_calc_unit_classifications {
        int tax_calc_unit_id PK
        nvarchar tax_calc_unit_code
        nvarchar tax_calc_unit_name
        bit is_deleted
        rowversion row_version
    }

    employees {
        int employee_id PK
        nvarchar employee_code
        nvarchar employee_name
        bit is_deleted
        rowversion row_version
    }

    customers {
        int customer_id PK
        nvarchar customer_code
        nvarchar customer_name
        tinyint closing_day "締日"
        int tax_fraction_id FK
        int tax_calc_unit_id FK
        int employee_id FK
        bit is_deleted
        rowversion row_version
    }

    products {
        int product_id PK
        nvarchar product_code
        nvarchar product_name
        int tax_type_id FK
        int tax_category_id FK
        bit is_deleted
        rowversion row_version
    }

    tax_rate_histories {
        int tax_rate_history_id PK
        int tax_category_id FK
        decimal rate
        date start_date
        date end_date
        bit is_deleted
        rowversion row_version
    }

    orders {
        int order_id PK
        nvarchar order_no "伝票番号"
        date order_date
        int customer_id FK
        nvarchar customer_code "ジャーナル保持"
        nvarchar customer_name "ジャーナル保持"
        int line_no "行番号"
        int product_id FK
        nvarchar product_code "ジャーナル保持"
        nvarchar product_name "ジャーナル保持"
        decimal quantity
        decimal unit_price
        int tax_type_id FK
        int tax_category_id FK
        nvarchar slip_remarks "伝票備考"
        nvarchar line_remarks "行備考"
        bit is_deleted
        rowversion row_version
    }

    sales {
        int sale_id PK
        nvarchar sale_no "伝票番号"
        date sale_date
        int customer_id FK
        nvarchar customer_code "ジャーナル保持"
        nvarchar customer_name "ジャーナル保持"
        int order_id FK "参照受注ID nullable"
        nvarchar order_no "参照受注伝票番号"
        int employee_id FK "実績担当者"
        nvarchar employee_code "ジャーナル保持"
        nvarchar employee_name "ジャーナル保持"
        int line_no "行番号"
        int product_id FK
        nvarchar product_code "ジャーナル保持"
        nvarchar product_name "ジャーナル保持"
        decimal quantity
        decimal unit_price
        int tax_type_id FK
        int tax_category_id FK
        int tax_calc_unit_id FK "得意先から引継ぎ"
        decimal tax_amount "消費税額（明細単位時）"
        date invoiced_date "請求集計日 NULL=未集計"
        nvarchar slip_remarks "伝票備考"
        nvarchar line_remarks "行備考"
        bit is_deleted
        rowversion row_version
    }

    receipts {
        int receipt_id PK
        nvarchar receipt_no "伝票番号"
        date receipt_date
        int customer_id FK
        nvarchar customer_code "ジャーナル保持"
        nvarchar customer_name "ジャーナル保持"
        int line_no "行番号"
        int payment_method_id FK
        decimal amount
        date invoiced_date "請求集計日 NULL=未集計"
        nvarchar slip_remarks "伝票備考"
        nvarchar line_remarks "行備考"
        bit is_deleted
        rowversion row_version
    }

    invoice_headers {
        int invoice_header_id PK
        int customer_id FK
        nvarchar customer_code "ジャーナル保持"
        nvarchar customer_name "ジャーナル保持"
        date invoice_date "請求締日"
        decimal previous_invoice_amount "前回請求額"
        decimal receipt_amount "入金額"
        decimal sales_amount_standard "売上額_標準税率"
        decimal sales_amount_reduced "売上額_軽減税率"
        decimal tax_amount_standard "消費税額_標準税率"
        decimal tax_amount_reduced "消費税額_軽減税率"
        decimal current_invoice_amount "今回請求額"
        bit is_deleted
        rowversion row_version
    }

    accounts_receivable_histories {
        int ar_history_id PK
        int customer_id FK
        nvarchar customer_code "ジャーナル保持"
        nvarchar customer_name "ジャーナル保持"
        char year_month "YYYYMM"
        decimal carried_over_amount "前月繰越残高"
        decimal sales_amount_standard "当月売上額_標準税率"
        decimal sales_amount_reduced "当月売上額_軽減税率"
        decimal tax_amount_standard "当月消費税額_標準税率"
        decimal tax_amount_reduced "当月消費税額_軽減税率"
        decimal receipt_amount "当月入金額"
        decimal closing_amount "当月末残高"
        bit is_deleted
        rowversion row_version
    }

    customers }o--|| tax_fraction_classifications : ""
    customers }o--|| tax_calc_unit_classifications : ""
    customers }o--|| employees : "担当社員"
    customers ||--o{ orders : ""
    customers ||--o{ sales : ""
    customers ||--o{ receipts : ""
    customers ||--o{ invoice_headers : ""
    customers ||--o{ accounts_receivable_histories : ""

    products }o--|| tax_type_classifications : ""
    products }o--|| tax_category_classifications : ""
    products ||--o{ orders : ""
    products ||--o{ sales : ""

    tax_rate_histories }o--|| tax_category_classifications : ""

    orders }o--|| tax_type_classifications : ""
    orders }o--|| tax_category_classifications : ""
    orders ||--o{ sales : "参照受注"

    sales }o--|| tax_type_classifications : ""
    sales }o--|| tax_category_classifications : ""
    sales }o--|| tax_calc_unit_classifications : ""
    sales }o--|| employees : "実績担当者"

    receipts }o--|| payment_method_classifications : ""
